--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,12 +1,15 @@
 .home {
-  margin: 2rem 6rem;
+  padding: 4em 12em;
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr 3fr 2fr;
   gap: 1.5em;
   max-width: 100vw;
   max-height: 100vh;
+  height: 100vh;
+  width: 100vw;
 }
-.header {
+.header,
+.blogs {
   grid-column: 1/-1;
 }
