resize of home and other components

--- a/src/styles/newscolumn.css
+++ b/src/styles/newscolumn.css
@@ -9,6 +9,8 @@
   font-size: 2.5rem;
 }
 .newscolumn__title {
+  font-family: interFontExtraBold;
+  font-size: 1.2rem;
   color: #fff;
 }
 .newscolumn__content {
