--- a/src/styles/blogs.css
+++ b/src/styles/blogs.css
@@ -1,23 +1,22 @@
 .blogs {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2em;
   max-height: 100%;
   width: 100%;
-  gap: 1.5em;
 }
 
 .blogs__card {
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto auto auto;
+  column-gap: 1.5em;
 }
 
 .blogs__card__pic {
   grid-column: 1/2;
   grid-row: 1/4;
-  max-width: 100%;
-  max-height: 100%;
-  height: 10rem;
+  height: 150px;
 }
 
 .blogs__card__id,
@@ -32,6 +31,7 @@
 }
 .blogs__card__title {
   font-family: interFontExtraBold;
+  font-size: 1.2rem;
 }
 .blogs__card__resume {
   color: #00000099;
