--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,15 +1,17 @@
 .home {
-  padding: 4em 12em;
+  padding: 4em 10em;
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 3fr 2fr;
-  gap: 1.5em;
-  max-width: 100vw;
-  max-height: 100vh;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 4fr 1fr;
+  gap: 2em;
   height: 100vh;
   width: 100vw;
 }
 .header,
 .blogs {
   grid-column: 1/-1;
+}
+
+.mainnew {
+  grid-column: 1/3;
 }
